CONFIGURE_FILE (${CMAKE_SOURCE_DIR}/include/matador/version.hpp.in ${CMAKE_BINARY_DIR}/version.hpp)

ADD_SUBDIRECTORY(object)
ADD_SUBDIRECTORY(orm)
ADD_SUBDIRECTORY(sql)
ADD_SUBDIRECTORY(utils)
ADD_SUBDIRECTORY(logger)
ADD_SUBDIRECTORY(net)
ADD_SUBDIRECTORY(http)
ADD_SUBDIRECTORY(unit)

ADD_SUBDIRECTORY(db)

INSTALL(
  FILES ${CMAKE_BINARY_DIR}/version.hpp
  DESTINATION include/matador
  COMPONENT headers
)
